--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>gllacy</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+     <header class="header"></header>
+     <div class="promo"></div>
+     <div class="icecream"></div>
+     <div class="about"></div>
+     <div class="map"></div>
+     <footer class="footer"></footer>
 </body>
 </html>
