--- a/index.html
+++ b/index.html
@@ -8,7 +8,31 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-     <header class="header"></header>
+     <header class="header">
+        <div class="container header_flex">
+            <img src="/svg/logo.svg" alt="" class="header_logo">
+            <ul class="header_ul">
+                <li class="header_ul_li"><a href="#">Каталог</a> </li>
+                <li class="header_ul_li"><a href="#">Доставка и оплата</a></li>
+                <li class="header_ul_li"><a href="#">О Компании</a></li>
+            </ul>
+            <input class="header_search" type="text">
+            <button class="button header_button">
+                <a href="#" class="button_href">
+                    <img class="button_icon" src="/img/Вход.png" alt="">
+                    <div class="button_text">Вход</div> 
+                </a>
+            </button>
+            <button class="button header_button">
+                <a href="#" class="button_href">
+                    <img class="button_icon" src="/svg/basket.svg" alt="">
+                    <div class="button_text">Пусто</div>                
+                </a>  
+            </button>
+            
+        </div>
+        
+     </header>
      <div class="promo"></div>
      <div class="icecream"></div>
      <div class="about"></div>
