upd block icecream

--- a/index.html
+++ b/index.html
@@ -67,9 +67,52 @@
             </div>
         </div>
      </section>
-     <section class="icecream"></section>
-     <section class="about"></section>
-     <section class="map"></section>
-     <footer class="footer"></footer>
+     <section class="icecream">
+        <div class="container icecream_flex">
+            <div class="icecream_item">
+                <div class="icecream_item_hit"></div>
+                <img src="/img/1.png" alt="" class="icecream_item_photo">
+                <h3 class="icecream_item_price">310₽<span>/кг</span> </h3>
+                <p class="icecream_item_p">Сливочное с апельсиновым <br> джемом и цитрусовой стружкой
+                </p>
+            </div>
+            <div class="icecream_item">
+                <div class="icecream_item_hit"></div>
+                <img src="/img/2.png" alt="" class="icecream_item_photo">
+                <h3 class="icecream_item_price">380₽<span>/кг</span> </h3>
+                <p class="icecream_item_p">Сливочно-кофейное с <br> кусочками шоколада
+                </p>
+            </div>
+            <div class="icecream_item">
+                <div class="icecream_item_hit"></div>
+                <img src="/img/3.png" alt="" class="icecream_item_photo">
+                <h3 class="icecream_item_price">355₽<span>/кг</span> </h3>
+                <p class="icecream_item_p">Сливочно-клубничное с <br> присыпкой из белого шоколада
+                </p>
+            </div>
+            <div class="icecream_item">
+                <div class="icecream_item_hit"></div>
+                <img src="/img/4.png" alt="" class="icecream_item_photo">
+                <h3 class="icecream_item_price">415₽<span>/кг</span> </h3>
+                <p class="icecream_item_p">Сливочное крем-брюле с <br> карамельной подливкой
+                </p>
+            </div>
+        </div>
+     </section>
+     <section class="about">
+        <div class="container header_flex">
+
+        </div>
+     </section>
+     <section class="map">
+        <div class="container header_flex">
+
+        </div>
+     </section>
+     <footer class="footer">
+        <div class="container header_flex">
+
+        </div>
+     </footer>
 </body>
 </html>
