upd block about

--- a/index.html
+++ b/index.html
@@ -100,8 +100,48 @@
         </div>
      </section>
      <section class="about">
-        <div class="container header_flex">
-
+        <div class="container about_flex">
+            <div class="about_whois">
+                <div class="about_whois_title">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</div>
+                <div class="about_whois_content">
+                    <div class="about_whois_item">
+                        <div class="about_whois_item_icon">
+                            <img src="/svg/ice-cream.svg" alt="">
+                        </div>
+                        <p class="about_whois_item_p">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+                    </div>
+                    <div class="about_whois_item">
+                        <div class="about_whois_item_icon">
+                            <img src="/svg/cow.svg" alt="">
+                        </div>
+                        <p class="about_whois_item_p">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+                    </div>
+                    <div class="about_whois_item">
+                        <div class="about_whois_item_icon">
+                            <img src="/svg/eco.svg" alt="">
+                        </div>
+                        <p class="about_whois_item_p">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </p>
+                    </div>
+                    <div class="about_whois_item">
+                        <div class="about_whois_item_icon">
+                            <img src="/svg/thermometer.svg" alt="">
+                        </div>
+                        <p class="about_whois_item_p">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
+                            </p>
+                    </div>
+                </div>
+            </div>
+            <div class="about_blog">
+                <div class="about_blog_title">Новое в нашем блоге</div>
+                <div class="about_blog_subtitle">10 способов сервировки <br>
+                    фруктовых щербетов к <br>
+                    столу</div>
+            </div>
+            <div class="about_mail">
+                <p class="about_mail_p">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
+                <input class="about_mail_input" type="text">
+                <button class="button about_mail_button">Отправить</button>
+            </div>
         </div>
      </section>
      <section class="map">
