--- a/index.html
+++ b/index.html
@@ -145,7 +145,18 @@
         </div>
      </section>
      <section class="map">
-        <div class="container header_flex">
+        <iframe class="map_google" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d23349.04881130531!2d47.47168351384283!3d42.98604394958048!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1661056947638!5m2!1sru!2sru" width="100%" height="430" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="container">
+            <div class="map_box">
+                <div class="map_box_adrtitle">Адрес главного офиса <br>
+                    и офлайн-магазина:
+                    </div>
+                <div class="map_box_adr">ул. Большая Конюшенная <br> 19/8, Санкт-Петербург</div>
+                <div class="map_box_phonetitle">Для заказов по телефону:</div>
+                <div class="map_box_phone">8 812 450-25-25</div>
+                <div class="map_box_subphone">(с 10 до 20 ежедневно)</div>
+                <button class="button map_button">Форма обратной связи</button>
+            </div>
 
         </div>
      </section>
