--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 </head>
 <body>
      <header class="header">
-        <div class="container header_flex">
-            <img src="/svg/logo.svg" alt="" class="header_logo">
+        <div class="container header_flex"><a href="/"><img src="/svg/logo.svg" alt="" class="header_logo"></a>
+            
             <ul class="header_ul">
-                <li class="header_ul_li"><a href="#">Каталог</a> </li>
+                <li class="header_ul_li"><a href="/catalog.html">Каталог</a> </li>
                 <li class="header_ul_li"><a href="#">Доставка и оплата</a></li>
                 <li class="header_ul_li"><a href="#about_whois"">О Компании</a></li>
             </ul>
             <input class="header_search" type="text">
-            <button class="button header_button">
+            <button class="button button_header">
                 <a href="#" class="button_href">
                     <img class="button_icon" src="/img/Вход.png" alt="">
                     <div class="button_text">Вход</div> 
                 </a>
             </button>
-            <button class="button header_button">
+            <button class="button button_header">
                 <a href="#" class="button_href">
                     <img class="button_icon" src="/svg/basket.svg" alt="">
                     <div class="button_text">Пусто</div>                
